# homelab-cost-optimizer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LEGAL.md  README.md  README.ru.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  security.yml
ai_providers/: __init__.py  base.py  mock_provider.py  openai_provider.py
blueprints/: README.md  __init__.py
blueprints/ai/: blueprint_ai_adapter.py
blueprints/ansible/: .ansible-lint
blueprints/ansible/inventories/: homelab.example.ini  smb-office.example.ini
blueprints/ansible/playbooks/: homelab.yaml  micro-saas.yaml  smb-office.yaml
blueprints/ansible/roles/docker-host/defaults/: main.yml
blueprints/ansible/roles/docker-host/tasks/: main.yml
blueprints/ansible/roles/k3s-node/defaults/: main.yml
blueprints/ansible/roles/k3s-node/tasks/: main.yml
blueprints/ansible/roles/nas/defaults/: main.yml
blueprints/docs/: topology-overview.md
blueprints/k3d/clusters/: demo-homelab.yaml  dev-micro-saas.yaml
blueprints/terraform/k3s-ci-monitoring/: README.md  main.tf  outputs.tf  variables.tf
blueprints/terraform/micro-saas/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
blueprints/terraform/modules/proxmox_vm/: main.tf  variables.tf
blueprints/terraform/proxmox-homelab/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
config/: electricity.example.yaml  optimizer.example.yaml
docs/: repository-structure.md
optimizer/: README.md
optimizer/homelab_cost_optimizer/: __init__.py  cli.py  config.py  models.py
optimizer/homelab_cost_optimizer/collectors/: __init__.py  base.py  docker_collector.py  k8s_collector.py  libvirt_collector.py  proxmox_collector.py
optimizer/homelab_cost_optimizer/consolidators/: __init__.py  heuristic_consolidator.py
optimizer/homelab_cost_optimizer/estimators/: cost_estimator.py  power_estimator.py
optimizer/homelab_cost_optimizer/reporters/: __init__.py  ai_reporter.py  markdown_reporter.py  text_reporter.py
scripts/: format.sh  lint.sh  perf_check.sh  security_scan.sh
tests/: conftest.py
tests/integration/: test_optimizer_workflow.py  test_terraform_blueprint_scaffolding.py
tests/unit/: test_blueprint_ai_adapter.py  test_cli.py  test_collectors.py  test_consolidators.py  test_cost_model.py  test_estimators.py  test_validation.py
(+8 files in other folders)
