[metadata]
name = homelab-cost-optimizer
version = attr: homelab_cost_optimizer.__version__

[options]
packages =
    homelab_cost_optimizer
    ai_providers
install_requires =
    typer>=0.9
    rich>=13.0
    PyYAML>=6.0
    requests>=2.31
python_requires = >=3.10
include_package_data = True
package_dir =
    homelab_cost_optimizer = optimizer/homelab_cost_optimizer
    ai_providers = ai_providers

[options.extras_require]
ai = openai>=1.0

dev =
    pytest>=7.4
    pytest-cov>=4.1
    ruff>=0.4
    black>=24.2
    isort>=5.13
    yamllint>=1.32
    ansible-lint>=6.22
    bandit>=1.7
    pip-audit>=2.7

[options.entry_points]
console_scripts =
    homelab-cost-optimizer = homelab_cost_optimizer.cli:app

[flake8]
max-line-length = 100
extend-ignore = E203, W503
